--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,123 @@ body {
 #design-box {
     background-color: #73BFB8;
 }
+
+/* SOBRE A EMPRESA */
+.footer-container {
+    background-image: url('https://images.pexels.com/photos/574070/pexels-photo-574070.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-position: center;
+}
+
+.about-container {
+    max-width: 1200px;
+    padding: 30px 10%;
+    position: relative;
+    clear: both;
+}
+
+.about-card {
+    float: left;
+    width: 30%;
+    padding: 30px;
+    background-color: #fff;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+.middle-card {
+    margin-left: 5%;
+    margin-right: 5%
+}
+
+.about-card i {
+    font-size: 50px;
+    color: #AAA;
+}
+
+.about-card p {
+    margin-top: 50px;
+    font-size: 14px;
+    line-height: 22px;
+    color: #888;
+    text-align: left;
+}
+
+/* FOOTER */
+footer {
+    clear: both;
+    max-width: 1200px;
+    height: 500px;
+    padding: 30px 10%;
+    position: relative;
+}
+
+.form-container {
+    width: 50%;
+    height: 375px;
+    position: relative;
+    display: block;
+    background-color: white;
+    opacity: 0.5;
+}
+
+.form-background {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: .5;
+}
+
+.form-container form {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    height: 300px;
+}
+.form-container input, .form-container textarea {
+    width: 400px;
+    display: block;
+    border: none;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #AAA;
+    border-radius: 0;
+    background-color: transparent;
+}
+
+.form-container textarea {
+    height: 120px;
+}
+
+.form-container input::placeholder, .footer-container textarea::placeholder {
+    font-size: 14px;
+}
+
+.form-container .submit {
+    background-color: #222;
+    color: #fff;
+    border: 1px solid transparent;
+    width: 100px;
+    position: relative;
+    float: right;
+    cursor: pointer;
+    transition: .5;
+}
+
+.form-container .submit:hover {
+    background-color: #fff;
+    color: #222;
+    border: 1px solid #222;
+}
+
+.copyright {
+    color: #222;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
